checkpoint 2 : data saved in db with #Error